[gd_scene load_steps=21 format=3 uid="uid://bql8akhayh121"]

[ext_resource type="Script" path="res://src/characters/bosses/Shaka Boom/Slime.gd" id="1_nbwbt"]
[ext_resource type="Script" path="res://assets/resources/scripts/exchangable/health/health_exchangable.gd" id="2_41e04"]
[ext_resource type="Texture2D" uid="uid://k1iit618dj2h" path="res://assets/sprites/characters/bosses/shaka boom/Slime MegaSheet.png" id="3_3r83j"]
[ext_resource type="Resource" uid="uid://2c0wuo38lug" path="res://assets/resources/instances/exchangable/Shaka/SlimeCrawl.tres" id="3_w3out"]
[ext_resource type="Script" path="res://custom_nodes/combat/hurt_box.gd" id="4_il4kr"]
[ext_resource type="Texture2D" uid="uid://c8awle6sackfu" path="res://assets/sprites/characters/bosses/shaka boom/slime_trail.png" id="4_nr7cg"]
[ext_resource type="Script" path="res://src/characters/bosses/hit_area.gd" id="5_oe48e"]
[ext_resource type="Script" path="res://custom_nodes/combat/health_monitor.gd" id="6_h85d6"]
[ext_resource type="Script" path="res://custom_nodes/combat/hit_box.gd" id="8_y3rji"]

[sub_resource type="Resource" id="Resource_htx0n"]
script = ExtResource("2_41e04")
max_health = 3
name = ""
symbol = 0

[sub_resource type="Curve" id="Curve_fp5lu"]
_data = [Vector2(0.00626959, 1), 0.0, 0.0, 0, 0, Vector2(0.862069, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_eyydu"]
offsets = PackedFloat32Array(0, 0.687285, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_uuf0a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -19)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D2:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("hurt_box/CollisionShape2D4:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("hitbox/CollisionShape2D5:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("hit_area/CollisionShape2D3:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("explode_goop:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CollisionShape2D2:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_wejv6"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [13, 14, 15, 16, 17, 18, 19]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [false],
"method": &"set_physics_process"
}, {
"args": [],
"method": &"create_puddle"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hurt_box/CollisionShape2D4:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("hitbox/CollisionShape2D5:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("hit_area/CollisionShape2D3:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("explode_goop:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CollisionShape2D2:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_gi45i"]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [22]
}

[sub_resource type="Animation" id="Animation_shoj8"]
resource_name = "idle"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [9, 10, 11, 12]
}

[sub_resource type="Animation" id="Animation_i34m0"]
resource_name = "start"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.903, 1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.364, 0.477, 0.896, 0.913, 1.071, 1.204, 1.3, 1.372),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1, 1), Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1), Vector2(1, 1), Vector2(0.85, 1.15), Vector2(0.85, 1.15), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.977, 1.002, 1.208, 1.327),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -19), Vector2(0, -19), Vector2(0, -23), Vector2(0, -23), Vector2(0, -19)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [false],
"method": &"set_physics_process"
}, {
"args": [true],
"method": &"set_physics_process"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D2:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("hurt_box/CollisionShape2D4:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("hitbox/CollisionShape2D5:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("hit_area/CollisionShape2D3:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("explode_goop:emitting")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "method"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath(".")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [false],
"method": &"toggle_trail"
}, {
"args": [true],
"method": &"toggle_trail"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_53jwu"]
_data = {
"RESET": SubResource("Animation_uuf0a"),
"dead": SubResource("Animation_wejv6"),
"hurt": SubResource("Animation_gi45i"),
"idle": SubResource("Animation_shoj8"),
"start": SubResource("Animation_i34m0")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bg2rr"]
radius = 12.0
height = 38.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_57ax2"]
radius = 6.0
height = 28.0

[node name="Slime" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 256
collision_mask = 257
script = ExtResource("1_nbwbt")
alignment = 1
health_handle = SubResource("Resource_htx0n")
primary_movement = ExtResource("3_w3out")

[node name="trail" type="CPUParticles2D" parent="."]
z_index = -1
position = Vector2(0, -10)
emitting = false
amount = 50
lifetime = 5.0
texture = ExtResource("4_nr7cg")
gravity = Vector2(0, 0)
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 0.4
scale_amount_max = 0.6
scale_amount_curve = SubResource("Curve_fp5lu")
color = Color(1, 1, 1, 0.501961)
color_initial_ramp = SubResource("Gradient_eyydu")

[node name="explode_goop" type="CPUParticles2D" parent="."]
z_index = -1
position = Vector2(0, -11)
emitting = false
amount = 10
lifetime = 0.4
one_shot = true
explosiveness = 1.0
texture = ExtResource("4_nr7cg")
emission_shape = 2
emission_sphere_radius = 10.0
direction = Vector2(0, -1)
spread = 70.0
initial_velocity_min = 150.0
initial_velocity_max = 250.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 0.1
scale_amount_max = 0.2
scale_amount_curve = SubResource("Curve_fp5lu")
color_initial_ramp = SubResource("Gradient_eyydu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_53jwu")
}
autoplay = "start"
next/hurt = &"idle"
next/start = &"idle"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -19)
texture = ExtResource("3_3r83j")
hframes = 23
frame = 22

[node name="hurt_box" type="Area2D" parent="." node_paths=PackedStringArray("health_monitor")]
script = ExtResource("4_il4kr")
health_monitor = NodePath("../HealthMonitor")
alignment = 1

[node name="CollisionShape2D4" type="CollisionShape2D" parent="hurt_box"]
position = Vector2(0, -10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_bg2rr")

[node name="hitbox" type="Area2D" parent="."]
script = ExtResource("8_y3rji")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, -10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_bg2rr")

[node name="hit_area" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0
script = ExtResource("5_oe48e")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="hit_area"]
position = Vector2(0, -10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_bg2rr")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(3, -1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_57ax2")

[node name="HealthMonitor" type="Node" parent="."]
script = ExtResource("6_h85d6")
_health = 10

[node name="Center" type="Marker2D" parent="."]
position = Vector2(0, -23)

[connection signal="hit" from="hurt_box" to="." method="_on_hit"]
[connection signal="hit" from="hurt_box" to="hurt_box" method="_on_hit"]
[connection signal="hit" from="hitbox" to="." method="_on_player_hit"]
[connection signal="killed" from="HealthMonitor" to="." method="die"]
